--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--This is our main html file--> 
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head> 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,25 +18,25 @@
             <h5>Imagine you don't need a diet because we provide <br> healthy and delicious food for you!</h5>
             <a class="link-btn" target ="_blank" href="https://www.foodpanda.com">Order Food</a>
         </div>
-        <div class="half-width">
+        <div id="first-girl" class="half-width">
             <img src="images/female/Group 8425.png" alt="first girl">
         </div>
     </section>
 
     <section class="about flexible-content">
-        <div id="about-img" class="half-width">
-            <img src="images/female/Person Image.png" alt="second girl">
-        </div>
+        
+            <img id="about-img" src="images/female/Person Image.png" alt="second girl">
+      
         <div class="half-width">
             <h1> About Me </h1>
-            <p> But you know what? Nothing is impossible.Don’t constrain yourself by what you think or what other people think.Just use these dream quotes to guide you.Put aside all the doubts you have, and begin dreaming! </p>
+            <h5> But you know what? Nothing is impossible.Don’t constrain yourself by what you think or what other people think.Just use these dream quotes to guide you.Put aside all the doubts you have, and begin dreaming! </h5>
             <a class="link-btn" target ="_blank" href="https://www.google.com">Contact Me</a>
         </div>
     </section>
 
     <section class="recipe">
         <h2>My Recipes</h2>
-        <p>my food is very tasty.</p>
+        <h5 style="text-align: center;">my food is very tasty.</h5>
         <div class="flexible-content">
             <div id="first" class="title">
                 <img src="images/food/Project Cover1.jpg">
@@ -69,8 +69,9 @@
             </div>
         </div>
         <div class="footer-main">
-           <h2><span class="name-color"> FOOD </span>NETWORK</h2>
+           <h2 style="color: gray;"><span class="name-color"> FOOD </span>NETWORK</h2>
            <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+           <p>© Developed by Showrav Mitra</p>
         </div>
     </footer>
 </body>
